Use uncollect_patterns table function to flatten patterns list
Signed-off-by: Songkan Tang <songkant@amazon.com>